// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment matches snapshot 1`] = `
<div>
  <article
    class="chakra-stack css-n21gh5"
  />
</div>
`;

exports[`CommentAuthor matches snapshot 1`] = `
<div>
  <h2
    class="chakra-heading css-1tapsqs"
  >
    Test
  </h2>
</div>
`;

exports[`CommentDate matches snapshot 1`] = `
<div>
  <p
    class="chakra-text css-5ft5pb"
  >
    Test
  </p>
</div>
`;

exports[`CommentRating matches snapshot 1`] = `
<div>
  <span
    aria-label="4 out of 5 stars"
    class="chakra-stack css-193rmy8"
  >
    <svg
      class="chakra-icon css-1k73fkr"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="chakra-icon css-1k73fkr"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="chakra-icon css-1k73fkr"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="chakra-icon css-1k73fkr"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="chakra-icon css-6aos0a"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`CommentText matches snapshot 1`] = `
<div>
  <p
    class="chakra-text css-0"
  >
    Test
  </p>
</div>
`;
